@@ -1,3 +1,8 @@
+lorm 0.2.21 2017-1-3
+
+[NEW]   compatible python3
+
+
 lorm 0.2.20 2016-12-22
 
 [DEL]   MysqlPool.__len__
